Fix flickering issue during loading

--- a/packages/webapp/src/components/Noun/Noun.module.css
+++ b/packages/webapp/src/components/Noun/Noun.module.css
@@ -2,6 +2,7 @@
     image-rendering: pixelated;
     image-rendering: -moz-crisp-edges;
     width: 100%;
+    height: 100%;
     max-width: 500px;
 }
 
